updated description for global macro project in data analysis section

--- a/data-analysis.html
+++ b/data-analysis.html
@@ -98,9 +98,9 @@
                         <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html"><img src="assets/imgs/global-macro.png" class="blog-card-img" alt="global macro website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
-                        <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
-                            In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
+                        <h5 class="blog-card-title">This Python and Django-based application showcases advanced data analysis capabilities through its robust handling of selected macroeconomic indicators. </h5>
+                        <p><b>Utilizing Pandas Datareader to seamlessly integrate with the FRED API, the application ensures the acquisition of high-quality and appropriately formatted datasets. 
+                            The data is validated for accuracy, ensuring the reliability of the analysis. The application employs comprehensive technical analysis tools, applying relevant algorithmic calculations to process and prepare the data for final results. These results are then utilized in various visualizations and techniques designed to aid users in making informed investing decisions.
                         </b></p>
                         <a href="explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html" class="blog-card-link">Read more<i class="ti-angle-double-right"></i></a>
                     </div>
@@ -111,7 +111,7 @@
                         <a href="discover-trend-direction-for-financial-instruments-with-stooq-api-powered-by-fastapi-and-python.html"><img src="assets/imgs/stooq-api.png" class="blog-card-img" alt="Stooq API website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This app has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h6>
+                        <h5 class="blog-card-title">This app has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h5>
                         <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
                             The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
                         </b></p>
@@ -124,7 +124,7 @@
                         <a href="unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html"><img src="assets/imgs/quant-catalog.png" class="blog-card-img" alt="Quant Catalog website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is a Python application powered by Django and its Object-Relational Mapper to provide convenient access to stored data.</h6>
+                        <h5 class="blog-card-title">This is a Python application powered by Django and its Object-Relational Mapper to provide convenient access to stored data.</h5>
                         <p><b>In fact, Django's ORM is just a pythonical way to create SQL to query and manipulate your database and get results in a pythonic fashion. In this particular case users are able to view different trading strategies and related financial markets. After completing the registration subscribers can login and are now able to create their own investment strategy. To delete records from the database users need to be added to special group and granted permissions by the website administrator.
                             Static files are served with WhiteNoise to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service.
                         </b></p>
