--- a/explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html
+++ b/explore-global-macro-trends-with-python-django-bokeh-and-htmx-technology.html
@@ -100,27 +100,19 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li><strong>Pandas-Datareader</strong> package makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series. </li>
+                                <li><strong>Pandas-Datareader</strong> Makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series. </li>
                                 <br>
-                                <li><strong>Python's Threading Module</strong> enables developers to run multiple threads simultaneously within a program, providing faster and more efficient execution.</li>
+                                <li><strong>Interactive Visualizations</strong> Utilizing Bokeh to create dynamic and detailed graphs, enabling users to explore data visually and gain valuable insights.</li>
                                 <br>
-                                <li>Utilizing <strong>template inheritance mechanism</strong> to create a visually appealing and user-friendly interface. This involves building a base template with common elements and defining blocks that child templates can override, allowing for a consistent and easily modifiable design.</li>
+                                <li><strong>Responsive User Interface</strong> Powered by HTMX, the application ensures a seamless and engaging user experience by making asynchronous HTTP requests and updating the UI efficiently.</li>
                                 <br>
-                                <li><strong>HTMX</strong> is a user-friendly library that simplifies the creation of highly dynamic and interactive web applications without requiring the use of complex JavaScript or CSS frameworks.</li>
+                                <li><strong>Data Accessibility</strong> Simplifies complex data sets through interactive visualizations, making data more understandable and actionable for users.</li>
                                 <br>
-                                <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
+                                <li><strong>Performance and Simplicity</strong> Maintains high performance and simplicity, ensuring that the application is both effective and easy to use.</li>
                                 <br>
-                                <li><strong>Bokeh</strong> is an excellent Python library for creating visually appealing and easy-to-understand data visualizations, including line charts, bar plots, and hexagonal tiles for binned aggregations.</li>
+                                <li><strong>Algorithmic Calculations</strong> Employs sophisticated algorithms to process and analyze data, preparing final results for insightful visualizations and decision-making tools.</li>
                                 <br>
-                                <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
-                                <br>
-                                <li><strong>Writing most of the functionality in Django models or utility files instead of views</strong> to enhance application performance, as they are loaded only once when the application starts up, thus reducing loading and processing costs.</li>
-                                <br>
-                                <li>To ensure sensitive information is kept secure, we store API keys, database passwords, and other credentials in <strong>environment variables</strong>. </li>
-                                <br>
-                                <li>In Django, we can optimize tests by <strong>utilizing the setUp</strong> method to handle expensive setup operations for all tests within a module, which saves time and resources, and makes our tests more reliable. </li>
-                                <br>
-                                <li><strong>The page object pattern</strong> follows the DRY principle, minimizing code duplication, and creates an interface between web page elements and tests, resulting in more robust tests and better test organization.</li>
+                                <li><strong>Data Quality and Validation</strong> Ensures the acquisition of high-quality, appropriately formatted datasets. The data is validated for accuracy and reliability, maintaining the integrity of the information.</li>
                             </ul>
                         </td>
                     </tbody>
