updated two last sections in data analysis page and their respective descriptions

--- a/data-analysis.html
+++ b/data-analysis.html
@@ -111,9 +111,9 @@
                         <a href="discover-trend-direction-for-financial-instruments-with-stooq-api-powered-by-fastapi-and-python.html"><img src="assets/imgs/stooq-api.png" class="blog-card-img" alt="Stooq API website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This app has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h5>
-                        <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
-                            The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
+                        <h5 class="blog-card-title">This application has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h5>
+                        <p><b>By leveraging the power of FastAPI and advanced data analysis techniques, it provides users with valuable insights into market trends, aiding in informed investing decisions. The data is sourced using pandas-datareader, ensuring the acquisition of high-quality, appropriately formatted datasets from Stooq's extensive database of historical stock prices. 
+                            Once the historical data is accessed, the application calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages serve as crucial indicators of the trend direction for each instrument.
                         </b></p>
                         <a href="discover-trend-direction-for-financial-instruments-with-stooq-api-powered-by-fastapi-and-python.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
@@ -124,9 +124,9 @@
                         <a href="unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html"><img src="assets/imgs/quant-catalog.png" class="blog-card-img" alt="Quant Catalog website mockup"></a>
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is a Python application powered by Django and its Object-Relational Mapper to provide convenient access to stored data.</h5>
-                        <p><b>In fact, Django's ORM is just a pythonical way to create SQL to query and manipulate your database and get results in a pythonic fashion. In this particular case users are able to view different trading strategies and related financial markets. After completing the registration subscribers can login and are now able to create their own investment strategy. To delete records from the database users need to be added to special group and granted permissions by the website administrator.
-                            Static files are served with WhiteNoise to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service.
+                        <h5 class="blog-card-title">This is a Python application powered by Django and its Object-Relational Mapper (ORM) to provide convenient access to stored data, enabling users to view different trading strategies and related financial markets.</h5>
+                        <p><b>Employs sophisticated algorithms to process and analyze financial data, preparing final results for insightful visualizations and aiding in informed investing decisions. Django's ORM allows users to query and manipulate the database in a pythonic fashion, facilitating seamless data management. After completing registration, subscribers can log in to create their own investment strategies. 
+                            Deletion of records from the database requires users to be added to a special group and granted permissions by the website administrator, ensuring data integrity and security.
                         </b></p>
                         <a href="unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
