--- a/discover-trend-direction-for-financial-instruments-with-stooq-api-powered-by-fastapi-and-python.html
+++ b/discover-trend-direction-for-financial-instruments-with-stooq-api-powered-by-fastapi-and-python.html
@@ -87,9 +87,9 @@
                         <img src="assets/imgs/stooq-api.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This app has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h6>
-                            <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
-                                The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
+                        <h5 class="blog-card-title">This application has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h6>
+                            <p><b>By leveraging the power of FastAPI and advanced data analysis techniques, it provides users with valuable insights into market trends, aiding in informed investing decisions. The data is sourced using pandas-datareader, ensuring the acquisition of high-quality, appropriately formatted datasets from Stooq's extensive database of historical stock prices. 
+                                Once the historical data is accessed, the application calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages serve as crucial indicators of the trend direction for each instrument.
                         </b></p>
                         <a href="https://github.com/mjaroszewski1979/stooq-api" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
@@ -100,15 +100,15 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li>By <strong>using pandas-datareader to access Stooq's extensive database</strong> of historical stock prices, traders and investors can easily retrieve and analyze historical price data for any given share ticker symbol, allowing them to make informed decisions based on historical market trends and patterns. </li>
+                                <li><strong>High-Quality Data Acquisition and Validation:</strong> Ensures the retrieval of accurate and reliable data from Stooq's extensive database, maintaining the validity and integrity of the datasets. </li>
                                 <br>
-                                <li>The basic <strong>HTML landing/index page</strong> serves as the initial point of contact between the user and the application.</li>
+                                <li><strong>Algorithmic Calculations:</strong> Utilizes sophisticated algorithms to calculate moving averages over 50-day, 100-day, and 200-day periods, providing key indicators of trend direction.</li>
                                 <br>
-                                <li>FastAPI provides <strong>interactive API documentation</strong> and exploration web user interfaces, making it easy for developers to understand available endpoints and request/response formats. </li>
+                                <li><strong>FastAPI Performance:</strong> Designed to be performant and easy to use, FastAPI handles heavy loads without sacrificing speed. Its intuitive design allows developers to quickly create APIs with minimal code. </li>
                                 <br>
-                                <li>The <strong>capability to return HTTP exceptions</strong> with a status code of 404 for non-existing symbols or tickers is an essential feature that prevents users from wasting time and effort searching for something that does not exist.</li>
+                                <li><strong>Error Handling:</strong> Includes the capability to return HTTP exceptions with a status code of 404 for non-existing symbols or tickers, preventing users from wasting time and effort on invalid queries.</li>
                                 <br>
-                                <li>This application includes powerful embedded <strong>interactive plotly visualizations charts</strong>, which provide an immersive and interactive user experience for exploring and analyzing financial data in real-time.</li>
+                                <li><strong>Basic HTML Landing Page:</strong>Serves as the initial point of contact between the user and the application, providing a simple and user-friendly interface.</li>
                             </ul>
                         </td>
                     </tbody>
