--- a/unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html
+++ b/unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html
@@ -87,9 +87,9 @@
                         <img src="assets/imgs/quant-catalog.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is a Python application powered by Django and its Object-Relational Mapper to provide convenient access to stored data.</h6>
-                            <p><b>In fact, Django's ORM is just a pythonical way to create SQL to query and manipulate your database and get results in a pythonic fashion. In this particular case users are able to view different trading strategies and related financial markets. After completing the registration subscribers can login and are now able to create their own investment strategy. To delete records from the database users need to be added to special group and granted permissions by the website administrator.
-                                Static files are served with WhiteNoise to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service.
+                        <h5 class="blog-card-title">This is a Python application powered by Django and its Object-Relational Mapper (ORM) to provide convenient access to stored data, enabling users to view different trading strategies and related financial markets.</h6>
+                            <p><b>Employs sophisticated algorithms to process and analyze financial data, preparing final results for insightful visualizations and aiding in informed investing decisions. Django's ORM allows users to query and manipulate the database in a pythonic fashion, facilitating seamless data management. After completing registration, subscribers can log in to create their own investment strategies. 
+                                Deletion of records from the database requires users to be added to a special group and granted permissions by the website administrator, ensuring data integrity and security.
                         </b></p>
                         <a href="https://github.com/mjaroszewski1979/quant-catalog" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
@@ -100,23 +100,17 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li>Working with <strong>template inheritance mechanism</strong> to build a base “skeleton” template that contains all the common elements and defines blocks that child templates can override.</li>
+                                <li><strong>High-Quality Data Acquisition and Validation:</strong> Ensures the retrieval of accurate and reliable data for creating and managing investment strategies, maintaining the validity and integrity of datasets.</li>
                                 <br>
-                                <li>Inserting images with dynamic path by <strong>utilizing built-in 'add' filter</strong> designed to format template variables. </li>
+                                <li><strong>Security Measures:</strong> Takes full advantage of Django's built-in features like Cross-Site Request Forgery (CSRF) protection to ensure safe data transfer in web forms to a database.</li>
                                 <br>
-                                <li>Taking full advantage of Django's built-in features like <strong>Cross-Site Request Forgery protection</strong> to ensure safe data transfer in web forms to a database.</li>
+                                <li><strong>Optimal ORM Performance:</strong> Implements many-to-many relationships to associate multiple records across tables, achieving optimal performance and allowing for varied data displays.</li>
                                 <br>
-                                <li>Associating multiple records in a table with multiple records in another table ( <strong>many-to-many relationship</strong> ) to achieve optimal ORM performance.</li>
+                                <li><strong>Advanced Querying with Q Objects:</strong> Uses Q objects to construct complex queries, providing complete control over extensive search functionality.</li>
                                 <br>
-                                <li>Displaying stored data with variation because of the fact that many-to-many relationships can be queried <strong>using lookups across relationships</strong>.</li>
+                                <li><strong>Group-Based Access Control:</strong> Applies GroupRequiredMixin from the django-braces module to ensure that only users in specified groups can perform certain actions, enhancing security and access control.</li>
                                 <br>
-                                <li>Using <strong>Q objects</strong> to achieve complete control over the complex queries necessary when constructing extensive search functionality.</li>
-                                <br>
-                                <li>Applying <strong>GroupRequiredMixin</strong> provided by a third-party module - django-braces - to ensure that the requesting user is in the group specified.</li>
-                                <br>
-                                <li>Serving static files with <strong>WhiteNoise</strong> to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service.</li>
-                                <br>
-                                <li></li>
+                                <li><strong>Template Inheritance Mechanism:</strong> Builds a base “skeleton” template containing all common elements and defining blocks that child templates can override, streamlining the development process.</li>
                             </ul>
                         </td>
                     </tbody>
